--- a/client/src/styles/editorReadonlyCustom.css
+++ b/client/src/styles/editorReadonlyCustom.css
@@ -1,6 +1,6 @@
 :root {
     /* Overrides the border radius setting in the theme. */
     --ck-border-radius: 0px;
-    --ck-color-base-background: hsl(0, 0%, 98%);
-    --ck-color-base-border: hsl(0, 0%, 98%);
+    --ck-color-base-background: hsla(0, 0%, 98%, 0);
+    --ck-color-base-border: hsla(0, 0%, 98%, 0);
 }
