--- a/client/src/assets/fonts/_fonts.scss
+++ b/client/src/assets/fonts/_fonts.scss
@@ -26,7 +26,7 @@
 
 
 @font-face{
-  font-family: "Mariupol";
+  font-family: 'l';
   src: url('l Medium.eot');
   src: url('l Medium.eot?#iefix') format('embedded-opentype'),
   url('l Medium.woff2') format('woff2'),
@@ -40,7 +40,7 @@
 
 
 @font-face{
-  font-family: "Mariupol";
+  font-family: 's';
   src: url('s.eot');
   src: url('s.eot?#iefix') format('embedded-opentype'),
   url('s.woff2') format('woff2'),
@@ -50,4 +50,50 @@
   font-style: normal;
   font-stretch: normal;
   unicode-range: U+0020-00BB
+}
+
+
+@font-face {
+  font-family: 'ubuntu_monobold';
+  src: url('ubuntumono-bold-webfont.eot');
+  src: url('ubuntumono-bold-webfont.eot?#iefix') format('embedded-opentype'),
+  url('ubuntumono-bold-webfont.woff2') format('woff2'),
+  url('ubuntumono-bold-webfont.woff') format('woff'),
+  url('ubuntumono-bold-webfont.svg#ubuntu_monobold') format('svg');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'ubuntu_monobold_italic';
+  src: url('ubuntumono-bolditalic.woff2') format('woff2'),
+  url('ubuntumono-bolditalic.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'ubuntu_monoitalic';
+  src: url('ubuntumono-italic-webfont.eot');
+  src: url('ubuntumono-italic-webfont.eot?#iefix') format('embedded-opentype'),
+  url('ubuntumono-italic-webfont.woff2') format('woff2'),
+  url('ubuntumono-italic-webfont.woff') format('woff'),
+  url('ubuntumono-italic-webfont.svg#ubuntu_monoitalic') format('svg');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'ubuntu_monoregular';
+  src: url('ubuntumono-regular-webfont.eot');
+  src: url('ubuntumono-regular-webfont.eot?#iefix') format('embedded-opentype'),
+  url('ubuntumono-regular-webfont.woff2') format('woff2'),
+  url('ubuntumono-regular-webfont.woff') format('woff'),
+  url('ubuntumono-regular-webfont.svg#ubuntu_monoregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+
 }
