--- a/client/src/styles/settings.scss
+++ b/client/src/styles/settings.scss
@@ -1,6 +1,6 @@
 @use 'vuetify/settings' with (
   $body-font-family: Mariupol,
   $border-radius-root: 0px,
-  $input-font-size:20px,
+  $input-font-size: 1rem,
 );
 @import "@/assets/fonts/fonts";
