many any correct

--- a/client/src/styles/settings.scss
+++ b/client/src/styles/settings.scss
@@ -2,5 +2,6 @@
   $body-font-family: Mariupol,
   $border-radius-root: 0px,
   $input-font-size: 1rem,
+  $field-border-width: 1px
 );
 @import "@/assets/fonts/fonts";
