--- a/client/src/styles/editorReadonlyCustom.css
+++ b/client/src/styles/editorReadonlyCustom.css
@@ -2,6 +2,7 @@
     /* Overrides the border radius setting in the theme. */
     --ck-border-radius: 0px;
     --ck-color-base-background: hsla(0, 0%, 98%, 100);
+    --ck-color-toolbar-background: hsla(0, 0%, 100%, 1);
     --ck-color-base-border: hsla(0, 0%, 98%, 0);
     --ck-font-size-base: 14px;
 
