--- a/client/src/styles/editorReadonlyCustom.css
+++ b/client/src/styles/editorReadonlyCustom.css
@@ -72,10 +72,10 @@ main .ck-editor[role='application'] .ck.ck-content,
 .ck.ck-toolbar{
     border:0;
 }
-.ck-content ol {
+.ck-content ul {
     list-style-type: disc;
 }
-.ck-content ul {
+.ck-content ol {
     list-style-type: decimal;
 }
 
@@ -411,7 +411,7 @@ body, html {
     padding: 0;
     margin: 0;
 
-    font-family: Mariupol, sans-serif;
+    font-family: Mariupol;
     font-size: 16px;
     line-height: 1.3;
 }
